test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values/src/cfg_attr_program_type.sw
// TODO-IG!: Comment: This test proves that TODO is fixed.
library;

#[cfg(program_type)]
pub fn not_ok() {}